force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__apiURL__c.field-meta.xml
<CustomField>
    <fullName>tspa__apiURL__c</fullName>
    <description>apiURL received from techsee end after user activation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>apiURL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>