force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Available_Tags__c.field-meta.xml
<CustomField>
    <fullName>tspa__Available_Tags__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Available Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>