force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__DNS_SSO_url__c.field-meta.xml
<CustomField>
    <fullName>tspa__DNS_SSO_url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNS SSO url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>