force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Domain_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domain Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>