force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__imageBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__imageBaseUrl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>