force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__recordingBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__recordingBaseUrl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recording Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>